--- a/.github/workflows/master_wabap.yml
+++ b/.github/workflows/master_wabap.yml
@@ -1,6 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
+
 name: Build and deploy Node.js app to Azure Web App - waBAP
 
 on:
@@ -46,9 +47,9 @@ jobs:
         with:
           name: node-app
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
+      - name: Azure WebApp
+        uses: Azure/webapps-deploy@v2
+
         with:
           app-name: 'waBAP'
           slot-name: 'Production'
